Make sure list icon is always visible

--- a/app/styles/components/influencer/profile-description/styles.less
+++ b/app/styles/components/influencer/profile-description/styles.less
@@ -65,7 +65,7 @@
       }
 
       .profile-description__action {
-        line-height: 24/@rem;
+        opacity: 1;
         padding: 0 @spacing-xx-sm 0 0;
       }
 
